  - a different font is used for rendering important topology labels (i.e. big cities)
  - landables can be displayed with runway heading and proportional length if the
    necessary data is contained in the waypoint files
  - glide terrain range line more detailed, uses 50 radial points rather than 20
  - added option to display track bearing line in map
* data files
  - support for SeeYou .CUP task files in the task manager
  - wing area field is read from extended polar files if available
  - zander files: description field is used for additional airport detection
  - added frequency parsing for airspace files
    - TNP: RADIO field
    - OpenAir: AR command
  - the frequency and runway heading/length given in cup files are now displayed
  - use runway heading and length contained in cup waypoint files
  - for WELT2000 generated winpilot waypoint files (.dat) use runway heading
* task
  - added BGA start point sector
  - added AAT annular sector
  - configurable alternate sorting 
    - by arrival altitude
    - along task direction
    - along home direction
  - "long-click" in task turnpoint zone displays Target dialog
  - "arm advance" menu buttons removed.  Next/previous buttons function as normal
    for turnpoints (including startpoints) not requiring arming, for those that do
    require arm, "next" reads and functions as "arm" on first press and once armed,
    reads and functions as "next".  "previous" reads and functions as "previous" if
    not armed, "disarm" if armed.
  - time margin of AAT optimisation is configurable under "Default task turnpoints" page, expert mode
    as "Optimisation Margin" option.
* Android
  - support landscape/portrait switching

Version 6.0.8 - not yet released
* devices
  - CAI302: fix task declaration on Android
* Linux
  - more dialog improvements

Version 6.0.7 - 2011/03/12
* devices
  - EW microRecorder: timeout during connect
  - EW microRecorder: increase RX timeout