@@ -48,6 +48,7 @@ Version 6.1 - not yet released
     necessary data is contained in the waypoint files
   - glide terrain range line more detailed, uses 50 radial points rather than 20
   - added option to display track bearing line in map
+  - optional transparent airspace rendering
 * data files
   - support for SeeYou .CUP task files in the task manager
   - wing area field is read from extended polar files if available
